crates/biome_js_type_info/snapshots/infer_resolved_type_from_static_promise_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
Promise.resolve("value");

```

```
Call Global TypeId(6)(Global TypeId(7))
```

## Registered types:

Global TypeId(6) => Promise.resolve

Global TypeId(7) => value: value
