crates/biome_js_type_info/snapshots/infer_resolved_type_of_destructured_array_element.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
const [a]: Array<string> = [];

```

```
a => Global TypeId(7)[0]

```

## Registered types:

Global TypeId(6) => string

Global TypeId(7) => instanceof Global TypeId(9)

Global TypeId(8) => Global TypeId(7)[0]

Global TypeId(9) => instanceof Array<T = Global TypeId(6)>
