crates/biome_js_type_info/snapshots/infer_type_of_array.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
const array: Array<string> = [];

```

```
array => instanceof unresolved reference "Array"<Global TypeId(6)>

```

## Registered types:

Global TypeId(6) => string
