crates/biome_js_type_info/snapshots/infer_type_of_async_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
async function returnsPromise(): Promise<string> {
	return "value";
}

```

```
async Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: unresolved reference "Promise"<Global TypeId(6)>
}
```

## Registered types:

Global TypeId(6) => string
