crates/biome_js_type_info/snapshots/infer_type_of_binary_expression_ne.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
const a = 0 !== 1;

```

```
a => value: true

```

## Registered types:
