crates/biome_js_type_info/snapshots/infer_type_of_destructured_array_element.snap
---
source: crates/biome_js_type_info/tests/type_info.rs
expression: content
---
```ts
const [a]: Array<string> = [];

```

```
a => "Array" {
  params: unknown
  type_args: string
}[0]

```
