crates/biome_js_type_info/snapshots/infer_type_of_function_with_destructured_arguments.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
function destruct(
	{ a, b }: { a: number; b: string },
	[first, ...rest]: Array<boolean>,
) {}

```

```
sync Function "destruct" {
  accepts: {
    params: [
      required (unnamed): Global TypeId(7) (bindings:
        a:Global TypeId(7).a, b:Global TypeId(7).b
      ), required (unnamed): unresolved reference "Array"<Global TypeId(10)> (bindings:
        first:unresolved reference "Array"<Global TypeId(10)>[0], rest:[(1 others)...unresolved reference "Array"<Global TypeId(10)>]
      )
    ]
    type_args: []
  }
  returns: unknown reference
}
```

## Registered types:

Global TypeId(6) => string

Global TypeId(7) => Object {
  prototype: No prototype
  members: {TypeMembers(
    Property(
      [a, required]
      Type(number)
    )
    Property(
      [b, required]
      Type(Global TypeId(6))
    )
  )}
}

Global TypeId(8) => Global TypeId(7).a

Global TypeId(9) => Global TypeId(7).b

Global TypeId(10) => boolean

Global TypeId(11) => unresolved reference "Array"<Global TypeId(10)>[0]

Global TypeId(12) => [(1 others)...unresolved reference "Array"<Global TypeId(10)>]
