crates/biome_js_type_info/snapshots/infer_type_of_literal.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
const a = 123.45;

```

```
a => value: 123.45

```

## Registered types:
