crates/biome_js_type_info/snapshots/infer_type_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

```

```
sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: unresolved reference "Promise"<number>
}
```

## Registered types:
